# First_Faults_GUI

./: .gitignore  CODE_OF_CONDUCT.md  Database.md  Neural_network.md  README.md  pyproject.toml  run_daily_snapshot.py  run_interlock.py  test_sql.py
Firts Fault GUI/presentations/: app.py
business/core/: fault_count_service.py  formatters.py  plc_data.py  singleton.py  tree_builder.py
business/services/: __init__.py  analyzer.py  cli.py  diagram_service_view.py  fault_count_service.py  models.py  plc_data_service.py  plc_service.py  run_interlock.py  tree_builder.py
business/utils/: cli.py  fault_count_formatter.py  mail_service.py  print_result.py
config/: config.toml  configuration.yml  logging_config.py
data/model/: ews.py  models.py  python_test.py
data/orm/: reporting_orm.py
data/repositories/: DB_Connection.py  db_connection_helper.py  plc_repository.py  repository.py  snapshot_repository.py
data/schemas/: Convert database.sql  Create database.sql  (+13 more)
docs/: HighLevelArchitectureDiagram.puml  ProjectStructureDiagram.puml  diagrams_page.md  gantt.mmd  project_verloop.md  table_tree_page.md
presentations/: app.py  plc.py  plc_routes.py
requirements/: ProjectStructureDiagram.puml
scripts/: backfill_snapshots.py  check_fault_counts.py  migrate.py  sql_proof.sql
tests/: DB_Connection.py  analyze_trends.py  anomaly_detector.py  fault_analyzer.py  fault_predictor.py  interlock_results.txt  interlock_search.py  interlock_search_old.py  main.py  ml_models.py  ml_pipeline.py  print_result.py  run_weekly_snapshot.py  snapshot_manager.py  test_data.py
(+37 files in other folders)
