[project]
name = "first-faults-gui"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "flask[all]>=3.1.2",
    "matplotlib>=3.10.7",
    "plotly[all]>=6.4.0",
    "pyodbc>=5.3.0",
    "pyyaml>=6.0.3",
    "termine>=0.1.5",
]
