[project]
name = "first-faults-gui"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "flask[all]>=3.1.2",
    "matplotlib>=3.10.7",
    "pandas>=2.3.3",
    "plotly[all]>=6.4.0",
    "pyodbc>=5.3.0",
    "pyyaml>=6.0.3",
    "sqlalchemy~=2.0",
    "termine>=0.1.5",
]
